ingress/traefik-web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - http:
      paths:
      - path: /traefik-web-ui
        backend:
          serviceName: traefik-web-ui
          servicePort: web
    # optional - host
    # host: traefik-ui.minikube
